# tech_eu_london_2026

./: .env.template  .gitignore  Makefile  README.md
cli/: README.md  pyproject.toml  setup.py
cli/src/agent/: config.py  dust_client.py  executor.py  gemini.py  invoice_utils.py  logger.py  main.py  platform_extrapolation.py  platform_memory.py  scheduler.py  seed_sync.py  skill_acquisition.py  skill_spec_utils.py  supabase_auth.py  trace_mining.py
cli/src/agent/commands/: ask.py  auth.py  benchmark.py  bootstrap.py  chat.py  cloud.py  eval_cmd.py  extrapolate.py  loop.py  mine.py  overview.py  patch.py  run_cmd.py  smoke.py  storage_check.py  swarm.py
cli/tests/: test_benchmark_summary.py  test_config.py  test_eval_heuristics.py  test_gemini.py  test_invoice_utils.py  test_loop_guard.py  test_platform_extrapolation.py  test_platform_memory.py  test_scheduler.py  test_seed_sync.py  test_skill_acquisition.py  test_skill_spec_utils.py  test_supabase_auth.py  test_swarm.py  test_trace_mining.py
migrations/: 002_events.sql  003_threads.sql
schemas/: EvalSpec.schema.json  RouteSpec.schema.json  RunReport.schema.json  SkillSpec.schema.json
seeds/: browser_smoke.py  envoice.bulk_create_drafts.json  envoice.extract_sales.json  envoice.mimic.foundation_20260222.json  envoice.purchase_invoice.new.json  envoice.sales_invoice.existing.json  envoice.sales_invoice.mined_test_20260222.json  envoice.sales_invoice.new_customer.json
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260221000000_init.sql  (+2 more)
worker/: package-lock.json  package.json  wrangler.toml
(+3 files in other folders)
